Add WebRTC P2P networking with Node ID connections and real-time sync

--- a/package.json
+++ b/package.json
@@ -9,23 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^17.0.0",
+    "@chainsafe/libp2p-yamux": "^8.0.1",
+    "@helia/unixfs": "^6.0.1",
+    "@libp2p/bootstrap": "^12.0.7",
+    "@libp2p/kad-dht": "^16.0.6",
+    "@libp2p/mdns": "^12.0.7",
+    "@libp2p/webrtc": "^6.0.7",
+    "@libp2p/websockets": "^10.0.7",
+    "@multiformats/multiaddr": "^13.0.1",
+    "blockstore-core": "^6.1.1",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
+    "datastore-core": "^11.0.2",
     "ethers": "^5.7.2",
     "framer-motion": "^10.16.4",
+    "helia": "^6.0.6",
     "https-browserify": "^1.0.0",
-    "ipfs-core": "^0.18.1",
+    "libp2p": "^3.0.7",
+    "multiformats": "^13.4.1",
     "next": "^14.0.3",
-    "orbit-db": "^0.29.0",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "eslint": "^8.54.0",
